--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ashutosh1919.github.io",
-  "homepage": "https://ashutosh1919.github.io/masterPortfolio/",
+  "name": "dipeshnarwat22.github.io",
+  "homepage": "https://dipeshnarwat22.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "graphql": "^14.5.8",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
